WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219144
[TextureMapperGL] The invert filter wrongly inverts pre-multiplied alpha color
https://bugs.webkit.org/show_bug.cgi?id=219144
Summary
[TextureMapperGL] The invert filter wrongly inverts pre-multiplied alpha color
Fujii Hironori
Reported
2020-11-18 20:51:47 PST
Created
attachment 414536
[details]
test case [TextureMapperGL] Extra white margin around rotated filter layers
Attachments
test case
(489 bytes, text/html)
2020-11-18 20:51 PST
,
Fujii Hironori
no flags
Details
[Screenshot] WinCairo port
(23.47 KB, image/png)
2020-11-18 20:53 PST
,
Fujii Hironori
no flags
Details
WIP patch
(991 bytes, patch)
2020-11-18 21:32 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
test case 2
(364 bytes, text/html)
2020-11-18 22:04 PST
,
Fujii Hironori
no flags
Details
Patch
(4.47 KB, patch)
2020-11-18 22:44 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-11-18 20:53:11 PST
Created
attachment 414537
[details]
[Screenshot] WinCairo port
Fujii Hironori
Comment 2
2020-11-18 21:32:23 PST
Created
attachment 414540
[details]
WIP patch
Fujii Hironori
Comment 3
2020-11-18 22:04:19 PST
Created
attachment 414541
[details]
test case 2
Fujii Hironori
Comment 4
2020-11-18 22:44:47 PST
Created
attachment 414542
[details]
Patch
Fujii Hironori
Comment 5
2020-11-18 23:15:30 PST
This patch also fixes the inverted down arrow on
https://webkit.org/
https://ibb.co/album/k3Qq27
Fujii Hironori
Comment 6
2020-11-19 11:43:50 PST
Comment on
attachment 414542
[details]
Patch Clearing flags on attachment: 414542 Committed
r270040
: <
https://trac.webkit.org/changeset/270040
>
Fujii Hironori
Comment 7
2020-11-19 11:43:53 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2020-11-19 11:44:18 PST
<
rdar://problem/71595442
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug