[TextureMapperGL] The invert filter wrongly inverts pre-multiplied alpha color https://bugs.webkit.org/show_bug.cgi?id=219144

Reviewed by Carlos Garcia Campos.

Source/WebCore:

Test: compositing/filters/invert-transparent.html

* platform/graphics/texmap/TextureMapperShaderProgram.cpp: Take alpha value as an argument.

LayoutTests:

* compositing/filters/invert-transparent-expected.html: Added.
* compositing/filters/invert-transparent.html: Added.

Canonical link: https://commits.webkit.org/231780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270040 268f45cc-cd09-0410-ab3c-d52691b4dbfc