Source/WebCore/platform/graphics/texmap/TextureMapperShaderProgram.cpp
@@ -337,10 +337,10 @@ static const char* fragmentTemplateCommon =
                 color.a);
         }
 
-        float invert(float n) { return (1.0 - n) * u_filterAmount + n * (1.0 - u_filterAmount); }
+        float invert(float n, float a) { return (a - n) * u_filterAmount + n * (1.0 - u_filterAmount); }
         void applyInvertFilter(inout vec4 color)
         {
-            color = vec4(invert(color.r), invert(color.g), invert(color.b), color.a);
+            color = vec4(invert(color.r, color.a), invert(color.g, color.a), invert(color.b, color.a), color.a);
         }
 
         void applyBrightnessFilter(inout vec4 color)
